syntax = "proto3";

package inventory;

service InventoryController {
    rpc FindOne (InventoryByItemId) returns (Inventory);
    rpc PostOne (CreateInventoryDto) returns (Inventory);
    rpc DeleteOne (InventoryByItemId) returns (DeleteResponse);
    rpc UpdateOne (CreateInventoryDto) returns (Inventory);
}

message InventoryByItemId {
    string id = 1;
}

message Inventory {
    int32 quantity = 1;
}

message CreateInventoryDto {
    string id = 1;
    int32 quantity = 2;
}

message DeleteResponse {
    string message = 1;
}