syntax = 'proto3';

package order;

service OrdersController {
    rpc FindOrder (GetOrderByIdDto) returns (Order);
    rpc CreateOrder(CreateOrderDto) returns (Order);
    rpc FindOrders(GetOrdersDto) returns (stream OrderInList);
    rpc UpdateOrder(UpdateOrderDto) returns (Order);
    rpc DeleteItem(DeleteItemInOrderDto) returns (MessageResponse);
    rpc DeleteOrder(DeleteOrderDto) returns (MessageResponse);
}

message GetOrderByIdDto {
    string id = 1;
}

message Order {
    string orderId = 1;
    string userId = 2;
    int32 varietyOfItems = 3;
    int32 totalPrice = 4;
    repeated ItemInOrder itemInOrder = 5;
    string createdAt = 6;
    string updatedAt = 7;
}

message CreateOrderDto {
    string userId = 1;
    repeated ItemInOrder itemInOrder = 2;
    int32 totalPrice = 3;
}

message GetOrdersDto {
    string userId = 1;
    int32 page = 2;
    int32 ordersPerPage = 3;
    bool deleted = 4;
}

message UpdateOrderDto {
    string orderId = 1;
    int32 discount = 2;
}

message DeleteItemInOrderDto {
    string orderId = 1;
    string itemId = 2;
}

message DeleteOrderDto {
    string id = 1;
}

message OrderInList {
    string orderId = 1;
    int32 varietyOfItems = 2;
    int32 totalPrice = 3;
    string updatedAt = 4;
}

message ItemInOrder {
    string itemId = 1;
    string image = 2;
    string name = 3;
    string description = 4;
    string metalImage = 5;
    int32 price = 6;
    int32 quantity = 7; 
}

message MessageResponse {
    string message = 1;
}